awsstudy-CF-課題26提出.yaml
AWSTemplateFormatVersion: 2010-09-09
Resources: 
  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      Tags:
        - Key: Name
          Value: MyVPC2fromCF
  
  Mysubnet01:
    Type: AWS::EC2::Subnet
    Properties:
     VpcId: !Ref MyVPC
     AvailabilityZone: ap-northeast-1a
     CidrBlock: 10.0.0.0/24
     MapPublicIpOnLaunch: true
     Tags:
       - Key: Name
         Value: aws-studyCF-subnet01
  Mysubnet02:
    Type: AWS::EC2::Subnet
    Properties:
     VpcId: !Ref MyVPC
     AvailabilityZone: ap-northeast-1c
     CidrBlock: 10.0.1.0/24
     Tags:
       - Key: Name
         Value: aws-studyCF-subnet02         

  MysecGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: awsstudyCF-sg
      GroupDescription: true
      VpcId: !Ref MyVPC
      SecurityGroupIngress:
      - IpProtocol: tcp
        FromPort: 22
        ToPort: 22
        CidrIp: 0.0.0.0/0
      Tags:
      - Key: Name
        Value: aws-studyCF-MysecGroup
  
  MyEC2Instance:
    Type: AWS::EC2::Instance
    Properties:
      KeyName: ayoan
      DisableApiTermination: true
      ImageId: ami-095af7cb7ddb447ef
      InstanceType: t2.micro
      SubnetId: !Ref Mysubnet01
      SecurityGroupIds: 
       - !Ref MysecGroup
      Tags:
        - Key: Name
          Value: aws-studyCF-EC2insatance

  MyInternetGateway:
   Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref MyInternetGateway

  MyRouteTable:
   Type: AWS::EC2::RouteTable
   Properties:
    VpcId: !Ref MyVPC

  DefaultRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref MyRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MyInternetGateway

  SubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Mysubnet01  
      RouteTableId: !Ref MyRouteTable
